--- a/style.css
+++ b/style.css
@@ -1,60 +1,102 @@
 * {
- padding: 0;
- margin: 0;
- font-family: sans-serif;
- box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
- display: flex;
- justify-content: center;
- align-items: center;
- justify-content: space-between;
- height: 100vh;
- background-image: url('/image/bg_img.jpg');
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+  height: 100vh;
+  background-image: url('/image/bg_img.jpg');
 }
 
 .wrapper {
- background-color: azure;
- height: 100vh;
- width: 55%;
+  background-color: azure;
+  height: 100vh;
+  width: 55%;
 }
 
 .image-container {
- width: 45%;
- height: 150px;
- background-color: rgba(100, 70, 250, 0.108);
- display: flex;
- justify-content: center;
- align-items: center;
- color: white;
- font-family: Norse ;
+  width: 45%;
+  height: 150px;
+  background-color: rgba(100, 70, 250, 0.108);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: Norse;
+  margin-bottom: 300px;
 }
 
-.text-container{
- border: 2px solid red;
- height: 35%;
- 
+.text-container {
+  font-family: sans-serif;
+  height: 20%;
+
 }
 
 p {
- margin-top: 80px;
- margin-bottom: 30px;
- margin-left: 30px;
- margin-right: 30px;
+  margin-top: 80px;
+  margin-bottom: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
-.container {
- max-width: 650px;
- padding: 28px;
- margin: 0 28px;
- overflow: hidden;
- background: rgba(179,
-   157,
-   219);
- box-shadow: 0 15px 20px rgba(0186,
-   104,
-   200);
+.container  {
+  width: 100%;
+  height: 50%;
+  border-radius: 5px;
+  overflow: hidden;
+  background: #FFFAF0;
+  box-shadow: 8px 10px 6px rgb(98, 76, 102);
+}
+form {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 
-.image-
+button{
+
+  margin-left: 265px;
+  width: 80px;
+  height: 20px;
+  background: #4682B4;
+  font-weight: bold;
+  border-radius: 5px;
+  
+}
+
+.input-box {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  padding-bottom: 15px;
+}
+
+.input-box label,
+.gender-title {
+  width: 200px;
+  color: black;
+  font-weight: bold;
+  margin: 5px 0;
+}
+
+.gender-title {
+  font-size: 16px;
+}
+
+.input-box input {
+  height: 30px;
+  width: 250px;
+  padding: 0 10px;
+  border-radius: 5px;
+  outline: none;
+}
+.input-box:nth-child(2n) {
+  justify-content: end;
+}
