--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 .image-container {
   width: 45%;
   height: 150px;
-  background-color: rgba(100, 70, 250, 0.108);
+  background-color: rgba(100, 70, 250, 0.1);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -48,16 +48,20 @@ p {
   width: 100%;
   height: 50%;
   border-radius: 5px;
-  overflow: hidden;
   background: #FFFAF0;
-  box-shadow: 8px 10px 6px rgb(98, 76, 102);
+  box-shadow: 8px 10px 6px rgb(255, 228, 225)
 }
+
+h2 {
+  margin-left: 50px;
+}
+
 form {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
-  margin-left: 10px;
+  margin-left: 50px;
   margin-top: 10px;
+  height: 90%;
 }
 
 button{
@@ -82,7 +86,6 @@ button{
 .gender-title {
   width: 200px;
   color: black;
-  font-weight: bold;
   margin: 5px 0;
 }
 
@@ -95,8 +98,21 @@ button{
   width: 250px;
   padding: 0 10px;
   border-radius: 5px;
-  outline: none;
+  border: 1px solid #ccc;
+  outline-color: blueviolet;
 }
 .input-box:nth-child(2n) {
   justify-content: end;
+}
+
+.login {
+  font-weight: bold;
+  margin-left: 265px;
+  font-size: 15px;
+}
+
+a {
+  font-size: 15px;
+  font-style: italic;
+  font-weight: bold;
 }
