--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
   a{
     font-weight: bold;
-    color: gold;
+    color: yellow;
     font-style: italic;
   }
 
@@ -139,8 +139,10 @@ button{
   font-size: 15px;
 }
 
-a {
-  font-size: 15px;
+.log-in {
+  font-size: 20px;
   font-style: italic;
   font-weight: bold;
+  color: green;
+  text-decoration: none;
 }
